# my-util-rust

./: .gitignore  Cargo.toml  README.md  note.md
examples/: error.rs  log.rs
examples/simple/: main.rs
src/: error.rs  lib.rs  log.rs
tests/: simple.rs
