[package]
name = "my-util"
version = "0.1.0"
edition = "2021"
description = "my util for rust"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/LonelyPale/my-util-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myutil"

[features]
default = ["error", "log"]
full = ["error", "log"]
error = ["eyre", "color-eyre"]
log = ["tracing", "tracing-subscriber", "tracing-error", "tracing-core", "tracing-log"]

[dependencies]
# error
eyre = { version = "0.6.12", optional = true }
color-eyre = { version = "0.6.3", optional = true }

# log
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"], optional = true }
tracing-error = { version = "0.2.0", optional = true }
tracing-core = { version = "0.1.32", optional = true }
tracing-log = { version = "0.2.0", optional = true }
